[package]
name = "stackoverflow-cli"
version = "0.0.1"
authors = ["Federico Vitale <hi@fedevitale.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
isahc = "1.4.0"
colored = "2.0.0"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.2"
